[package]
name = "tryvial"
version = "0.1.2"
edition = "2021"

description = "Small crate for ok-wrapping and try blocks"
repository = "https://github.com/JoJoJet/tryvial"
license = "MIT OR Apache-2.0"
keywords = ["try", "catch", "ok", "wrap", "throw"]
categories = ["rust-patterns", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tryvial-proc = { path = "tryvial-proc", version = "0.1.0", optional = true }

[features]
default = ["proc-macro"]
proc-macro = ["dep:tryvial-proc"]
