[package]
name = "tryvial-proc"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "Procedural macro for the `tryvial` crate"
repository = "https://github.com/JoJoJet/tryvial"
license = "MIT OR Apache-2.0"
keywords = []
categories = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
venial = "0.5.0"
